# ego-planner

./: .gitignore
src/uav_simulator/mockamap2/: CMakeLists.txt  package.xml
src/uav_simulator/mockamap2/config/: rviz.rviz
src/uav_simulator/mockamap2/include/: simple_map.hpp
src/uav_simulator/mockamap2/launch/: mockamap2.launch
src/uav_simulator/mockamap2/src/: mockamap2.cpp  simple_map.cpp
src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
src/uav_simulator/so3_quadrotor_simulator/src/test_dynamics/: test_dynamics.cpp
utils_python/: dynamics_data.csv  visualize_dynamics.py
